@@ -1,6 +1,10 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Made the Clone module a hard requirement, so we don't have to
+      provide a fallback function for HTTP::Headers::clone().
+      We require at least Clone 0.46, as that release now supports
+      Perl back to 5.8.1, just like us. (GH#64) (Neil Bowers)
 
 6.43      2022-10-22 14:50:35Z
     - Remove dependency to IO::Uncompress::Bunzip2. (Michal Josef Spacek)
